feat(start.sh): support start/stop script with -s stop option